--- a/FinalProject/src/main/webapp/static/css/style.css
+++ b/FinalProject/src/main/webapp/static/css/style.css
@@ -4,6 +4,10 @@ body {
     background-color: #eee;
 }
 
+h2.welcome, .row.welcome {
+    margin-bottom: 70px;
+}
+
 .form-signin {
     max-width: 330px;
     padding: 15px;
@@ -45,4 +49,43 @@ body {
 
 .has-error {
     color: red
+}
+
+.nopadding {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+/*search*/
+
+#custom-search-input{
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+}
+
+#custom-search-input input{
+    border: 0;
+    box-shadow: none;
+}
+
+#custom-search-input button{
+    margin: 2px 0 0 0;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #666666;
+    /*padding: 0 8px 0 10px;*/
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input button:hover{
+    border: 0;
+    box-shadow: none;
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input .glyphicon-search{
+    font-size: 23px;
 }
